# ParallelPoissonSolver

./: .gitignore  README.md
solverPoissonMPI_CPU/: CMakeLists.txt
solverPoissonMPI_CPU/include/: inputParam.hpp
solverPoissonMPI_CPU/run/: run.slurm  solver.e
solverPoissonMPI_CPU/run/scorep-20241119_0057_4917037378409865/: profile.cubex
solverPoissonMPI_CPU/run/scorep-20241119_0148_4923972727945335/: profile.cubex
solverPoissonMPI_CPU/src/: main.cpp
solverPoissonMPI_alpaka/: CMakeLists.txt
solverPoissonMPI_alpaka/env/dardel/: CMakeLists.txt  CMakeListsCPU.txt  CMakeListsGPU.txt  run.slurm  runCPU.slurm  runGPU.slurm  solverPoisson_dardel.profile  solverPoisson_dardelCPU.profile  solverPoisson_dardelGPU.profile
solverPoissonMPI_alpaka/env/lumi/: CMakeListsCPU.txt  CMakeListsGPU.txt  run.slurm  runCPU.slurm  runGPU.slurm  runV0.slurm  solverPoisson_lumiCPU.profile  solverPoisson_lumiG.profile  solverPoisson_lumiGPU.profile
solverPoissonMPI_alpaka/env/mareNostrum5/: CMakeLists.txt  run.slurm  solverPoisson_mareNostrum5GPU.profile
solverPoissonMPI_alpaka/include/: BiCGstabAlpaka.hpp  alpakaHelper.hpp  blockGrid.hpp  chebyshevIterationAlpaka.hpp  communicationMPI.hpp  inputParam.hpp  iterativeSolverBase.hpp  iterativeSolverBaseAlpaka.hpp  kernelsAlpaka.hpp  kernelsAlpakaBiCGstab.hpp  kernelsAlpakaChebyshev.hpp  kernelsAlpakaIterativeSolverBase.hpp  noneSolverAlpaka.hpp  operationGrid.hpp  solverSetup.hpp  solvers.hpp  testAcc.hpp
solverPoissonMPI_alpaka/run/: residualHistory.txt  run.slurm  select_gpu  solver.e
solverPoissonMPI_alpaka/src/: main.cpp
